# MachineLearning-CPP

./: CMakeLists.txt  README.md
0_BasicTools/: CMakeLists.txt
0_BasicTools/include/: Tools.hpp
0_BasicTools/include/tools/: LoadData.hpp  Matrix.hpp  StrTool.hpp
0_BasicTools/src/: LoadData.cpp
1_GenData/: CMakeLists.txt  README.md
1_GenData/include/: genPositionData.hpp
1_GenData/src/: genPositionData.cpp  main.cpp
2_Kmeans/: CMakeLists.txt  README.md
2_Kmeans/include/: Kmeans.hpp
2_Kmeans/src/: Kmeans.cpp  header.hpp  header.tp  main.cpp
3_AP_Clsuter/: CMakeLists.txt  README.md
3_AP_Clsuter/include/: AffinityPropagation.cpp  AffinityPropagation.h  Matrix.hpp  gencpp.py
3_AP_Clsuter/src/: AffinityPropagation.cpp  main.cpp
data/2_dim_points/: data.txt
